--- a/controller config/conf_uso.ini
+++ b/controller config/conf_uso.ini
@@ -3,6 +3,11 @@
 èñ10=RI(1,4,0)
 èñ11=RI(2,4,0)
 èñ12=RI(3,4,0)
+[Attach USO1 Channel2]
+;ÇÄ1=test_param1
+èã12=RO(267,9,0)
+èã13=RI(258,9,0)
+èã14=RI(258,10,0)
 [Channel1 serial]
 com_baud=9600
 com_databits=8
@@ -10,8 +15,15 @@ com_number=7
 com_parity=not
 com_stopbits=2
 data_flow=HD
+[Channel2 serial]
+com_baud=115200
+com_databits=8
+com_number=6
+com_parity=not
+com_stopbits=2
+data_flow=HD
 [General Options]
-quan_channels=1
+quan_channels=2
 [Options Channel1]
 channel_busy=0
 quan_USO=1
@@ -23,9 +35,26 @@ timeout=500
 type_USO=MODBUS_SLAVE
 type_connect=serial
 type_protocol=MODBUS_RTU
+[Options Channel2]
+channel_busy=0
+quan_USO=1
+quan_retry=20
+sendpause=0
+time_busy=0
+time_reconnect=0
+timeout=500
+type_USO=MODBUS_SLAVE
+type_connect=serial
+type_protocol=MODBUS_RTU
 [Options USO1 Channel1]
 addressUSO=12
 single_write=0
 var_statusUSO=èã20
+[Options USO1 Channel2]
+addressUSO=3
+single_write=0
+var_statusUSO=èã21
 [Trend USO1 Channel1]
+;ë¨Ø1.è•‡Æ1=test_param1
+[Trend USO1 Channel2]
 ;ë¨Ø1.è•‡Æ1=test_param1
